--- a/services.html
+++ b/services.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Услуги</title>
     <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="script/list_services.js"></script>
+    <script type="module" src="script/services.js" async></script>
 </head>
 
 <body>
@@ -33,137 +35,7 @@
     <section class="catalog center">
         <h2 class="title">УСЛУГИ</h2>
 
-        <div class="catalog__box">
-            <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/bathroom_services.png"
-                    alt="interior design project photography">
-                <div class="catalog__box-info">
-                    <h3 class="catalog__info catalog__info_size catalog__info_transform">Дизайн-проект <br>
-                        интерьера санузла</h3>
-                    <p class="catalog__info catalog__info_size catalog__info_transform catalog__info_price">От 10000 ₽
-                    </p>
-                </div>
-            </article>
-            <div class="catalog__features">
-                <ul class="catalog__ul">
-                    <li class="catalog__text">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту
-                        потолков, местоположение дверных и&nbsp;оконных проемов.</li>
-                    <li class="catalog__text">Планирование. На&nbsp;этом этапе необходимо рассчитать количество
-                        материалов, продумать освещение, подобрать цвета и&nbsp;наметить конструктивные элементы (ниши
-                        и&nbsp;перегородки).</li>
-                    <li class="catalog__text">Выбор стиля. Это решающий этап, который определит концепцию интерьера
-                        в&nbsp;целом. От&nbsp;этого будут зависеть цветовые сочетания, выбор материалов и&nbsp;мебели.
-                    </li>
-                    <li class="catalog__text">Подбор и&nbsp;расстановка мебели. Предусмотреть габариты
-                        и&nbsp;местоположение мебели важно еще на&nbsp;этапе планирования. От&nbsp;этого параметра
-                        зависит функциональность комнаты.</li>
-                    <li class="catalog__text">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо
-                        продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно
-                        и&nbsp;функционально.</li>
-                    <li class="catalog__text">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки,
-                        необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="catalog__box catalog__box_position-reverse">
-            <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/bedroom_services.png"
-                    alt="interior design project photography">
-                <div class="catalog__box-info">
-                    <h3 class="catalog__info catalog__info_size catalog__info_transform">Дизайн-проект <br>
-                        интерьера спальни</h3>
-                    <p class="catalog__info catalog__info_size catalog__info_transform catalog__info_price">От 12000 ₽
-                    </p>
-                </div>
-            </article>
-            <div class="catalog__features">
-                <ul class="catalog__ul">
-                    <li class="catalog__text">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту
-                        потолков, местоположение дверных и&nbsp;оконных проемов.</li>
-                    <li class="catalog__text">Планирование. На&nbsp;этом этапе необходимо рассчитать количество
-                        материалов, продумать освещение, подобрать цвета и&nbsp;наметить конструктивные элементы (ниши
-                        и&nbsp;перегородки).</li>
-                    <li class="catalog__text">Выбор стиля. Это решающий этап, который определит концепцию интерьера
-                        в&nbsp;целом. От&nbsp;этого будут зависеть цветовые сочетания, выбор материалов и&nbsp;мебели.
-                    </li>
-                    <li class="catalog__text">Подбор и&nbsp;расстановка мебели. Предусмотреть габариты
-                        и&nbsp;местоположение мебели важно еще на&nbsp;этапе планирования. От&nbsp;этого параметра
-                        зависит функциональность комнаты.</li>
-                    <li class="catalog__text">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо
-                        продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно
-                        и&nbsp;функционально.</li>
-                    <li class="catalog__text">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки,
-                        необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="catalog__box">
-            <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/kitchen_services.png"
-                    alt="interior design project photography">
-                <div class="catalog__box-info">
-                    <h3 class="catalog__info catalog__info_size catalog__info_transform">Дизайн-проект <br>
-                        интерьера кухни</h3>
-                    <p class="catalog__info catalog__info_size catalog__info_transform catalog__info_price">От 15000 ₽
-                    </p>
-                </div>
-            </article>
-            <div class="catalog__features">
-                <ul class="catalog__ul">
-                    <li class="catalog__text">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту
-                        потолков, местоположение дверных и&nbsp;оконных проемов.</li>
-                    <li class="catalog__text">Планирование. На&nbsp;этом этапе необходимо рассчитать количество
-                        материалов, продумать освещение, подобрать цвета и&nbsp;наметить конструктивные элементы (ниши
-                        и&nbsp;перегородки).</li>
-                    <li class="catalog__text">Выбор стиля. Это решающий этап, который определит концепцию интерьера
-                        в&nbsp;целом. От&nbsp;этого будут зависеть цветовые сочетания, выбор материалов и&nbsp;мебели.
-                    </li>
-                    <li class="catalog__text">Подбор и&nbsp;расстановка мебели. Предусмотреть габариты
-                        и&nbsp;местоположение мебели важно еще на&nbsp;этапе планирования. От&nbsp;этого параметра
-                        зависит функциональность комнаты.</li>
-                    <li class="catalog__text">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо
-                        продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно
-                        и&nbsp;функционально.</li>
-                    <li class="catalog__text">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки,
-                        необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="catalog__box catalog__box_position-reverse">
-            <article class="catalog__desc">
-                <img class="catalog__photo" src="img/services/kids_services.png"
-                    alt="interior design project photography">
-                <div class="catalog__box-info">
-                    <h3 class="catalog__info catalog__info_size catalog__info_transform">Дизайн-проект <br>
-                        интерьера детской</h3>
-                    <p class="catalog__info catalog__info_size catalog__info_transform catalog__info_price">От 14000 ₽
-                    </p>
-                </div>
-            </article>
-            <div class="catalog__features">
-                <ul class="catalog__ul">
-                    <li class="catalog__text">Анализ. Важно оценить размер помещений, конструктивные особенности, высоту
-                        потолков, местоположение дверных и&nbsp;оконных проемов.</li>
-                    <li class="catalog__text">Планирование. На&nbsp;этом этапе необходимо рассчитать количество
-                        материалов, продумать освещение, подобрать цвета и&nbsp;наметить конструктивные элементы (ниши
-                        и&nbsp;перегородки).</li>
-                    <li class="catalog__text">Выбор стиля. Это решающий этап, который определит концепцию интерьера
-                        в&nbsp;целом. От&nbsp;этого будут зависеть цветовые сочетания, выбор материалов и&nbsp;мебели.
-                    </li>
-                    <li class="catalog__text">Подбор и&nbsp;расстановка мебели. Предусмотреть габариты
-                        и&nbsp;местоположение мебели важно еще на&nbsp;этапе планирования. От&nbsp;этого параметра
-                        зависит функциональность комнаты.</li>
-                    <li class="catalog__text">Подбор электроники и&nbsp;планирование электрической разводки. Необходимо
-                        продумать месторасположение каждой розетки и&nbsp;выключателя так, чтобы это было удобно
-                        и&nbsp;функционально.</li>
-                    <li class="catalog__text">Планирование пола и&nbsp;потолков. Кроме выбора материалов для отделки,
-                        необходимо учесть места стыков, подиумы и&nbsp;ступени, наличие подогрева или регуляторов.</li>
-                </ul>
-            </div>
-        </div>
+        <div class="catalog__conteiner"></div>
     </section>
 
     <footer class="footer">
